// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shows the back after clicking the flip button 1`] = `
<div>
  <Text
    as="span"
    letterSpacing="normal"
    size="medium"
  >
    Back Side
  </Text>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Flip
  </Button>
</div>
`;

exports[`shows the front of the card by default 1`] = `
<div>
  <Text
    as="span"
    letterSpacing="normal"
    size="medium"
  >
    Front Side
  </Text>
  <Button
    as="button"
    buttonRef={[Function]}
    fluidWidth={false}
    margin="0"
    onClick={[Function]}
    size="medium"
    type="button"
    variant="default"
  >
    Flip
  </Button>
</div>
`;
